# sourmash_plugin_sra_download

./: README.md  environment.yml  pyproject.toml
src/: sourmash_plugin_sra_download.py
