# CTB: search for xyz and replace with plugin-specific information!

[project]
name = "sourmash_plugin_sra_download"
description = "sourmash plugin to do sra_download"
readme = "README.md"
requires-python = ">=3.8"
version = "0.1"

dependencies = ["sourmash>=4.8.0,<5", "kingfisher>=0.2.2"]

[metadata]
license = { text = "BSD 3-Clause License" }

# CTB note: you only need to include information about the entry points
# that your plugin defines; remove the rest. Multiple entry points of
# any particular type are perfectly fine too!

[project.entry-points."sourmash.cli_script"]
sra_download_command = "sourmash_plugin_sra_download:Command_sra_download"